--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -9813,4 +9813,538 @@
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>与外部合作伙伴的网络通信故障</value>
   </data>
+  <data name="BOTTLES SELECTION" xml:space="preserve">
+    <value>瓶子选择</value>
+  </data>
+  <data name="ELUTRIATOR" xml:space="preserve">
+    <value>淘析器</value>
+  </data>
+  <data name="MIXERS" xml:space="preserve">
+    <value>搅拌机</value>
+  </data>
+  <data name="DRY" xml:space="preserve">
+    <value>干燥</value>
+  </data>
+  <data name="WASH TANK" xml:space="preserve">
+    <value>清洗槽</value>
+  </data>
+  <data name="ED-CUR" xml:space="preserve">
+    <value>埃德-库尔</value>
+  </data>
+  <data name="DRY-GRINDER" xml:space="preserve">
+    <value>干磨机</value>
+  </data>
+  <data name="MIX SILOS" xml:space="preserve">
+    <value>混合筒仓</value>
+  </data>
+  <data name="F-SORTERS" xml:space="preserve">
+    <value>F-分拣机</value>
+  </data>
+  <data name="SORTING AIR FILTERS" xml:space="preserve">
+    <value>空气过滤器分类</value>
+  </data>
+  <data name="RINSE" xml:space="preserve">
+    <value>冲洗</value>
+  </data>
+  <data name="DRYING AIR FILTER" xml:space="preserve">
+    <value>干燥空气过滤器</value>
+  </data>
+  <data name="BAG STATIONS" xml:space="preserve">
+    <value>行李站</value>
+  </data>
+  <data name="SWITCH COLORS" xml:space="preserve">
+    <value>切换颜色</value>
+  </data>
+  <data name="SORTER MINOR ALARM" xml:space="preserve">
+    <value>分拣机轻微警报</value>
+  </data>
+  <data name="PET WASHING" xml:space="preserve">
+    <value>宠物清洗</value>
+  </data>
+  <data name="ENABLE 2 FACTOR AUTHENTICATION" xml:space="preserve">
+    <value>启用 2 因素身份验证</value>
+  </data>
+  <data name="USER WITH 2FA NEEDS A PASSWORD" xml:space="preserve">
+    <value>使用 2Fa 的用户需要密码</value>
+  </data>
+  <data name="SAVE NEW" xml:space="preserve">
+    <value>保存新内容</value>
+  </data>
+  <data name="PROTECTED" xml:space="preserve">
+    <value>受保护</value>
+  </data>
+  <data name="IMPORT BACKUP" xml:space="preserve">
+    <value>导入备份</value>
+  </data>
+  <data name="CREATED BY" xml:space="preserve">
+    <value>创建者</value>
+  </data>
+  <data name="CENTRIFUGE SPEED SETPOINT" xml:space="preserve">
+    <value>离心机速度设定值</value>
+  </data>
+  <data name="PREWASH WCE - MAIN MOTOR" xml:space="preserve">
+    <value>预洗 WCE - 主电机</value>
+  </data>
+  <data name="PREWASH WCE - HOPPER LEVEL" xml:space="preserve">
+    <value>PreWash WCE - 料斗液位</value>
+  </data>
+  <data name="HEAT EXCHANGER - HOT WATER VALVE" xml:space="preserve">
+    <value>热交换器-热水阀</value>
+  </data>
+  <data name="DECANTER - FRESH WATER" xml:space="preserve">
+    <value>醒酒器 - 淡水</value>
+  </data>
+  <data name="DECANTER - TREATED WATER" xml:space="preserve">
+    <value>Decanter - 处理过的水</value>
+  </data>
+  <data name="DECANTER - WATER LEVEL" xml:space="preserve">
+    <value>卧螺离心机 - 水位</value>
+  </data>
+  <data name="DECANTER - WATER TEMPERATURE" xml:space="preserve">
+    <value>卧螺离心机 - 水温</value>
+  </data>
+  <data name="DECANTER - DISCHARGE PUMP" xml:space="preserve">
+    <value>卧螺离心机 - 排出泵</value>
+  </data>
+  <data name="DISK SEPARATOR - MAIN MOTOR" xml:space="preserve">
+    <value>圆盘分离器 - 主电机</value>
+  </data>
+  <data name="DISK SEPARATOR - ASPIRATION" xml:space="preserve">
+    <value>磁盘分离器 - 抽吸</value>
+  </data>
+  <data name="GRINDERS - MANAGER" xml:space="preserve">
+    <value>磨床 - 经理</value>
+  </data>
+  <data name="AIR LOCK - CLEANING" xml:space="preserve">
+    <value>气锁 - 清洁</value>
+  </data>
+  <data name="SILO BUFFER - LEVEL" xml:space="preserve">
+    <value>筒仓缓冲器 - 液位</value>
+  </data>
+  <data name="SILO BUFFER - EXTRACTION SCREWS" xml:space="preserve">
+    <value>筒仓缓冲器 - 拔出螺丝</value>
+  </data>
+  <data name="HOT WASH - REACTOR MIXER" xml:space="preserve">
+    <value>热洗-反应混合器</value>
+  </data>
+  <data name="HOT WASH - REACTOR BOTTOM MIXER" xml:space="preserve">
+    <value>热洗-反应器底部混合器</value>
+  </data>
+  <data name="HOT WASH - TANK TEMPERATURE" xml:space="preserve">
+    <value>热洗 - 水箱温度</value>
+  </data>
+  <data name="HOT WASH - REACTOR MANAGER" xml:space="preserve">
+    <value>热洗 - 反应器管理器</value>
+  </data>
+  <data name="DCE - GREASE APPLICATOR" xml:space="preserve">
+    <value>DCE - 润滑脂涂抹器</value>
+  </data>
+  <data name="RINSING - AGITATOR REACTOR" xml:space="preserve">
+    <value>冲洗-搅拌反应器</value>
+  </data>
+  <data name="DRYER - TEMPERATURE" xml:space="preserve">
+    <value>烘干机 - 温度</value>
+  </data>
+  <data name="DRY GRINDER - MAIN MOTOR" xml:space="preserve">
+    <value>干磨机 - 主电机</value>
+  </data>
+  <data name="SILO MIXER - MANAGER" xml:space="preserve">
+    <value>筒仓搅拌机 - 经理</value>
+  </data>
+  <data name="SILO MIXER - EXTRACTION SCREW" xml:space="preserve">
+    <value>筒仓混合机 - 提取螺杆</value>
+  </data>
+  <data name="BUHLER FLAKES SORTER - MAIN START" xml:space="preserve">
+    <value>布勒薄片分选机 - 主要启动</value>
+  </data>
+  <data name="DELETE THIS DASHBOARD?" xml:space="preserve">
+    <value>删除此仪表板？</value>
+  </data>
+  <data name="THIS DASHBOARD WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>该仪表板将从所有计算机中删除。</value>
+  </data>
+  <data name="ADD WIDGET" xml:space="preserve">
+    <value>添加小部件</value>
+  </data>
+  <data name="SINGLE VALUE WIDGET" xml:space="preserve">
+    <value>单值小部件</value>
+  </data>
+  <data name="MULTIPLE VALUES WIDGET" xml:space="preserve">
+    <value>多值小部件</value>
+  </data>
+  <data name="GAUGE  WIDGET" xml:space="preserve">
+    <value>仪表小部件</value>
+  </data>
+  <data name="CHART  WIDGET" xml:space="preserve">
+    <value>图表小部件</value>
+  </data>
+  <data name="BAR  WIDGET" xml:space="preserve">
+    <value>酒吧小工具</value>
+  </data>
+  <data name="NEW DASHBOARD" xml:space="preserve">
+    <value>新仪表板</value>
+  </data>
+  <data name="DASHBOARD" xml:space="preserve">
+    <value>仪表板</value>
+  </data>
+  <data name="NO DASHBOARDS FOUND" xml:space="preserve">
+    <value>未找到仪表板</value>
+  </data>
+  <data name="RELOAD DASHBOARDS" xml:space="preserve">
+    <value>重新加载仪表板</value>
+  </data>
+  <data name="DOWNSTREAM READY FOR MATERIAL" xml:space="preserve">
+    <value>下游准备材料</value>
+  </data>
+  <data name="SORAMA READY FOR MATERIAL" xml:space="preserve">
+    <value>索拉玛准备材料</value>
+  </data>
+  <data name="PREWASH WCE - SAFETY KEY" xml:space="preserve">
+    <value>PreWash WCE - 安全钥匙</value>
+  </data>
+  <data name="PREWASH WCE - AUX HYDRAULIC UNIT" xml:space="preserve">
+    <value>PreWash WCE - 辅助液压装置</value>
+  </data>
+  <data name="PREWASH WCE - MAINTENANCE PROCEDURE" xml:space="preserve">
+    <value>PreWash WCE - 维护程序</value>
+  </data>
+  <data name="DECANTER - SKIPPER" xml:space="preserve">
+    <value>醒酒器 - 船长</value>
+  </data>
+  <data name="ROTATION NOT OK FOR CLUTCH LS" xml:space="preserve">
+    <value>离合器 L 旋转不正常</value>
+  </data>
+  <data name="DISK SEPARATOR - AUX ANGLE ADJUST MOTOR" xml:space="preserve">
+    <value>圆盘分离器 - 辅助角度调节电机</value>
+  </data>
+  <data name="LOCAL CONTROL ENABLE" xml:space="preserve">
+    <value>本地控制启用</value>
+  </data>
+  <data name="LOCAL REQUEST UP" xml:space="preserve">
+    <value>本地请求向上</value>
+  </data>
+  <data name="LOCAL REQUEST DOWN" xml:space="preserve">
+    <value>本地请求下降</value>
+  </data>
+  <data name="(1=DOWN)" xml:space="preserve">
+    <value>(1=向下)</value>
+  </data>
+  <data name="MAX UP POSITION" xml:space="preserve">
+    <value>最大向上位置</value>
+  </data>
+  <data name="(1=MAX UP)" xml:space="preserve">
+    <value>(1=最大)</value>
+  </data>
+  <data name="MAX DOWN POSITION" xml:space="preserve">
+    <value>最大向下位置</value>
+  </data>
+  <data name="(1 = MAX DOWN)" xml:space="preserve">
+    <value>（1 = 最大下降）</value>
+  </data>
+  <data name="POSITION UP NOT OK" xml:space="preserve">
+    <value>位置向上不行</value>
+  </data>
+  <data name="POSITION DOWN NOT OK" xml:space="preserve">
+    <value>位置向下不行</value>
+  </data>
+  <data name="LOCAL SELECTOR ENABLED" xml:space="preserve">
+    <value>启用本地选择器</value>
+  </data>
+  <data name="SELECT LOCAL COMMAND ENABLE" xml:space="preserve">
+    <value>选择本地命令启用</value>
+  </data>
+  <data name="LOCAL DIRECTION" xml:space="preserve">
+    <value>本地方向</value>
+  </data>
+  <data name="SELECT DIRECTION BY LOCAL PANEL" xml:space="preserve">
+    <value>通过本地面板选择方向</value>
+  </data>
+  <data name="NOT MAXIMUM UP" xml:space="preserve">
+    <value>未达到最大上限</value>
+  </data>
+  <data name="MAXIMUM UPPER POSITION REACHED" xml:space="preserve">
+    <value>已达到最大上部位置</value>
+  </data>
+  <data name="NOT MAXIMUM DOWN" xml:space="preserve">
+    <value>不是最大下降</value>
+  </data>
+  <data name="MAXIMUM LOWER POSITION REACHED" xml:space="preserve">
+    <value>达到最大下部位置</value>
+  </data>
+  <data name="INCREASE" xml:space="preserve">
+    <value>增加</value>
+  </data>
+  <data name="DECREASE" xml:space="preserve">
+    <value>减少</value>
+  </data>
+  <data name="DISK SEPARATOR - BLOWER" xml:space="preserve">
+    <value>盘式分离器 - 鼓风机</value>
+  </data>
+  <data name="SAFETY GRINDER" xml:space="preserve">
+    <value>安全研磨机</value>
+  </data>
+  <data name="SAFETY NOT OK OF GRINDER" xml:space="preserve">
+    <value>研磨机的安全性不太好</value>
+  </data>
+  <data name="SAFETY GRINDERS" xml:space="preserve">
+    <value>安全研磨机</value>
+  </data>
+  <data name="MORE MATERIAL TO GRINDER" xml:space="preserve">
+    <value>更多材料进入研磨机</value>
+  </data>
+  <data name="NOT ALL MATERIAL TO GRINDER" xml:space="preserve">
+    <value>并非所有材料都适合研磨机</value>
+  </data>
+  <data name="WATER TO" xml:space="preserve">
+    <value>水至</value>
+  </data>
+  <data name="RUN OF GRINDER" xml:space="preserve">
+    <value>研磨机运转</value>
+  </data>
+  <data name="MOTOR STOPPED OF GRINDER" xml:space="preserve">
+    <value>研磨机电机停止</value>
+  </data>
+  <data name="DISABLE GRINDER" xml:space="preserve">
+    <value>禁用研磨机</value>
+  </data>
+  <data name="EMPTY CURRENT OF GRINDER" xml:space="preserve">
+    <value>磨床空电流</value>
+  </data>
+  <data name="LONG AVERAGE CURRENT OF GRINDER" xml:space="preserve">
+    <value>磨床长平均电流</value>
+  </data>
+  <data name="POWER SWITCH BREAKER OPEN" xml:space="preserve">
+    <value>电源开关断路器断开</value>
+  </data>
+  <data name="GRINDER - AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>研磨机 - 辅助。液压单元</value>
+  </data>
+  <data name="GRINDER - MAINTENANCE PROCEDURE" xml:space="preserve">
+    <value>磨床 - 维护程序</value>
+  </data>
+  <data name="SILO BUFFER - EXTRACTION SCREWS MANAGER" xml:space="preserve">
+    <value>筒仓缓冲器 - 取出螺丝管理器</value>
+  </data>
+  <data name="SHUTOFF GATE REACTOR" xml:space="preserve">
+    <value>截止门反应器</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE VALVE" xml:space="preserve">
+    <value>热洗-排放阀</value>
+  </data>
+  <data name="HOT WASH - REACTOR EMPTY CYCLE" xml:space="preserve">
+    <value>热洗-反应器空循环</value>
+  </data>
+  <data name="HOT WASH - REACTOR PREPARATION CYCLE" xml:space="preserve">
+    <value>热洗 - 反应器准备循环</value>
+  </data>
+  <data name="HOT WASH - REACTOR WASHING CYCLE" xml:space="preserve">
+    <value>热洗 - 反应器清洗循环</value>
+  </data>
+  <data name="LAST BATCH TIME" xml:space="preserve">
+    <value>最后一批时间</value>
+  </data>
+  <data name="HOT WASH - DETAIL" xml:space="preserve">
+    <value>热水洗 - 细节</value>
+  </data>
+  <data name="HOPPER" xml:space="preserve">
+    <value>料斗</value>
+  </data>
+  <data name="DCE - AUX HYDRAULIC UNIT" xml:space="preserve">
+    <value>DCE - 辅助液压装置</value>
+  </data>
+  <data name="DCE - HOPPER CLEANING" xml:space="preserve">
+    <value>DCE - 料斗清洁</value>
+  </data>
+  <data name="MATERIAL STOP" xml:space="preserve">
+    <value>物料停止</value>
+  </data>
+  <data name="BOTTOM DISCHARGE COMPLETED" xml:space="preserve">
+    <value>底部卸料完成</value>
+  </data>
+  <data name="DCE - BOTTOM RINSE CYCLE" xml:space="preserve">
+    <value>DCE - 底部冲洗循环</value>
+  </data>
+  <data name="DCE - MAINTENANCE OPEN CYCLE" xml:space="preserve">
+    <value>大商所 - 维护开路循环</value>
+  </data>
+  <data name="DCE - LUBRIFICATION AND RINSE" xml:space="preserve">
+    <value>DCE - 润滑和冲洗</value>
+  </data>
+  <data name="DCE - CLEANING VALVES" xml:space="preserve">
+    <value>DCE - 清洗阀门</value>
+  </data>
+  <data name="SEPARATION TANK - SCREW CONVEYOR" xml:space="preserve">
+    <value>分离罐-螺旋输送机</value>
+  </data>
+  <data name="MINIMUM LEVEL OK" xml:space="preserve">
+    <value>最低级别确定</value>
+  </data>
+  <data name="RESTART ENABLED" xml:space="preserve">
+    <value>重新启动已启用</value>
+  </data>
+  <data name="PROGRESSIVE RESTART NOT ENABLED" xml:space="preserve">
+    <value>未启用渐进式重启</value>
+  </data>
+  <data name="SEPARATION TANK - PADDLES VIEW" xml:space="preserve">
+    <value>分离罐 - 桨叶视图</value>
+  </data>
+  <data name="VERTICAL DCE - FEEDING SCREW" xml:space="preserve">
+    <value>立式DCE-送料螺杆</value>
+  </data>
+  <data name="VERTICAL DCE - AIR FAN" xml:space="preserve">
+    <value>立式 DCE - 风扇</value>
+  </data>
+  <data name="WATER SAVE MODE" xml:space="preserve">
+    <value>节水模式</value>
+  </data>
+  <data name="WATER SAVE MODE DISABLED" xml:space="preserve">
+    <value>节水模式已禁用</value>
+  </data>
+  <data name="DESTINATION TANK LEVEL" xml:space="preserve">
+    <value>目标储罐液位</value>
+  </data>
+  <data name="DESTINATION TANK LEVEL NOT OK" xml:space="preserve">
+    <value>目标储罐液位不正常</value>
+  </data>
+  <data name="SETPOINT WITH NO MATERIAL" xml:space="preserve">
+    <value>无材料设定值</value>
+  </data>
+  <data name="BIG BAG STATION - DIVERTER" xml:space="preserve">
+    <value>大袋站 - 分流器</value>
+  </data>
+  <data name="BIG BAG STATION - BAG" xml:space="preserve">
+    <value>大包站-包</value>
+  </data>
+  <data name="BIG BAG STATION" xml:space="preserve">
+    <value>大袋站</value>
+  </data>
+  <data name="WATER TANK - PUMP TO DCES" xml:space="preserve">
+    <value>水箱 - 泵至 Dces</value>
+  </data>
+  <data name="DRYER - FLUID BED" xml:space="preserve">
+    <value>干燥机 - 流化床</value>
+  </data>
+  <data name="DRYER - ASPIRATION" xml:space="preserve">
+    <value>烘干机 - 吸气</value>
+  </data>
+  <data name="DRYER - BLOWER" xml:space="preserve">
+    <value>烘干机 - 鼓风机</value>
+  </data>
+  <data name="DRY GRINDER - SAFETY KEY" xml:space="preserve">
+    <value>干磨机 - 安全钥匙</value>
+  </data>
+  <data name="DRY GRINDER - AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>干磨机 - 辅助。液压单元</value>
+  </data>
+  <data name="DRY GRINDER - COOLING" xml:space="preserve">
+    <value>干磨机 - 冷却</value>
+  </data>
+  <data name="DRY GRINDER - MAINTENANCE PROCEDURE" xml:space="preserve">
+    <value>干磨机 - 维护程序</value>
+  </data>
+  <data name="SILO MIXER - MIXER MOTOR" xml:space="preserve">
+    <value>筒仓搅拌机 - 搅拌机电机</value>
+  </data>
+  <data name="SILO MIXER - AIR FILTRATION VALVE" xml:space="preserve">
+    <value>筒仓搅拌机 - 空气过滤阀</value>
+  </data>
+  <data name="SILO MIXER - CYCLE" xml:space="preserve">
+    <value>筒仓搅拌机 - 循环</value>
+  </data>
+  <data name="SILOS ARE GOING TO BE ALL FULL - MATERIAL PRESTOP" xml:space="preserve">
+    <value>筒仓将全部满 - 物料预停</value>
+  </data>
+  <data name="SOREMA READY TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema 准备好接收材料</value>
+  </data>
+  <data name="NO SOREMA FAULTS" xml:space="preserve">
+    <value>无索雷玛故障</value>
+  </data>
+  <data name="BUHLER FLAKES SORTER - RECOVERY START" xml:space="preserve">
+    <value>布勒薄片分选机 - 恢复启动</value>
+  </data>
+  <data name="BUHLER FLAKES SORTER - MAIN STREAM START" xml:space="preserve">
+    <value>布勒薄片分选机 - 主流启动</value>
+  </data>
+  <data name="FILLING RESTART DELAY" xml:space="preserve">
+    <value>灌装重启延迟</value>
+  </data>
+  <data name="FILLING RESTART DELAY IN PROGRESS" xml:space="preserve">
+    <value>灌装重启延迟正在进行中</value>
+  </data>
+  <data name="BAG STATION" xml:space="preserve">
+    <value>行李站</value>
+  </data>
+  <data name="MAXIMUM PRODUCTION SPEED" xml:space="preserve">
+    <value>最大生产速度</value>
+  </data>
+  <data name="MINIMUM PRODUCTION SPEED" xml:space="preserve">
+    <value>最低生产速度</value>
+  </data>
+  <data name="AIR FILTRATION - AIR LOCK POWDER" xml:space="preserve">
+    <value>空气过滤 - 气锁粉</value>
+  </data>
+  <data name="AIR FILTRATION - DEVICE CONTROLLER" xml:space="preserve">
+    <value>空气过滤 - 设备控制器</value>
+  </data>
+  <data name="AIR FILTRATION - FILTER VIEW" xml:space="preserve">
+    <value>空气过滤 - 过滤器视图</value>
+  </data>
+  <data name="PLANT SUPERVISION MONITORING" xml:space="preserve">
+    <value>工厂监督监测</value>
+  </data>
+  <data name="COMMUNICATION CONTROL WITH" xml:space="preserve">
+    <value>通讯控制与</value>
+  </data>
+  <data name="WATCHDOG SIGNAL INPUT" xml:space="preserve">
+    <value>看门狗信号输入</value>
+  </data>
+  <data name="COMMUNICATION DISABLED - ALL EXTERNAL SIGNALS ARE BYPASSED !" xml:space="preserve">
+    <value>通信已禁用 - 所有外部信号均被绕过！</value>
+  </data>
+  <data name="NO BYPASS" xml:space="preserve">
+    <value>无旁路</value>
+  </data>
+  <data name="COMMUNICATION BYPASS REQUESTED" xml:space="preserve">
+    <value>请求绕过通信</value>
+  </data>
+  <data name="PLANT CONTROL ELECTRICAL CABINET" xml:space="preserve">
+    <value>工厂控制电气柜</value>
+  </data>
+  <data name="PREWASHING ELECTRICAL CABINET" xml:space="preserve">
+    <value>预洗电气柜</value>
+  </data>
+  <data name="FILTRATION ELECTRICAL CABINET" xml:space="preserve">
+    <value>过滤电气柜</value>
+  </data>
+  <data name="GRINDER ELECTRICAL CABINET" xml:space="preserve">
+    <value>磨床电气柜</value>
+  </data>
+  <data name="HOTWASHING ELECTRICAL CABINET" xml:space="preserve">
+    <value>热洗电气柜</value>
+  </data>
+  <data name="SEPARATION ELECTRICAL CABINET" xml:space="preserve">
+    <value>分离电气柜</value>
+  </data>
+  <data name="DRYING ELECTRICAL CABINET" xml:space="preserve">
+    <value>干燥电气柜</value>
+  </data>
+  <data name="DRY GRINDER ELECTRICAL CABINET" xml:space="preserve">
+    <value>干磨机电气柜</value>
+  </data>
+  <data name="SORTING ELECTRICAL CABINET" xml:space="preserve">
+    <value>分拣电气柜</value>
+  </data>
+  <data name="RINSING AND DRYING AIR FILTER " xml:space="preserve">
+    <value>清洗干燥空气过滤器</value>
+  </data>
+  <data name="MIXING SILOS" xml:space="preserve">
+    <value>混合筒仓</value>
+  </data>
+  <data name="SORTERS" xml:space="preserve">
+    <value>分拣机</value>
+  </data>
+  <data name="AIR FILTER" xml:space="preserve">
+    <value>空气过滤器</value>
+  </data>
 </root>
