--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -3367,10 +3367,10 @@
     <value>HZ_RATIO_ACTUAL</value>
   </data>
   <data name="SYNCHRONIZATION - TARGET RATIO FEEDER/ROTOR HZ" xml:space="preserve">
-    <value>Sincronizzazione - Obiettivo di rapporto Alimentatore/rotore in HZ</value>
+    <value>Sincronizzazione Traino/Rotore - Impostazione</value>
   </data>
   <data name="SYNCHRONIZATION - ACTUAL RATIO FEEDER/ROTOR HZ" xml:space="preserve">
-    <value>Sincronizzazione - Attuale rapporto Alimentatore/rotore in HZ</value>
+    <value>Sincronizzazione Traino/Rotore - Attuale</value>
   </data>
   <data name="ANTIFOAM" xml:space="preserve">
     <value>Anti-schiuma</value>
@@ -9812,5 +9812,11 @@
   </data>
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>Interruzione della comunicazione di rete con il partner esterno</value>
+  </data>
+  <data name="FEEDER AND ROTOR SYNCHRONIZATION" xml:space="preserve">
+    <value>Sicronizzazione Traino e Rotore</value>
+  </data>
+  <data name="FREQUENCY RATIO TARGET" xml:space="preserve">
+    <value>Impostazione Rapporto di Frequenza</value>
   </data>
 </root>
