--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -9813,4 +9813,10 @@
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>与外部合作伙伴的网络通信故障</value>
   </data>
+  <data name="FEEDER AND ROTOR SYNCHRONIZATION" xml:space="preserve">
+    <value>餵料器和轉子同步</value>
+  </data>
+  <data name="FREQUENCY RATIO TARGET" xml:space="preserve">
+    <value>频率比目标</value>
+  </data>
 </root>
