--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -9813,4 +9813,10 @@
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>انهيار اتصالات الشبكة مع الشريك الخارجي</value>
   </data>
+  <data name="FEEDER AND ROTOR SYNCHRONIZATION" xml:space="preserve">
+    <value>تزامن وحدة التغذية والدوار</value>
+  </data>
+  <data name="FREQUENCY RATIO TARGET" xml:space="preserve">
+    <value>هدف نسبة التردد</value>
+  </data>
 </root>
