--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -9813,4 +9813,10 @@
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>Netwerkcommunicatiestoring met externe partner</value>
   </data>
+  <data name="FEEDER AND ROTOR SYNCHRONIZATION" xml:space="preserve">
+    <value>Feeder- en rotorsynchronisatie</value>
+  </data>
+  <data name="FREQUENCY RATIO TARGET" xml:space="preserve">
+    <value>Doelfrequentieverhouding</value>
+  </data>
 </root>
