--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -10179,4 +10179,10 @@
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>Network Communication Breakdown With External Partner</value>
   </data>
+  <data name="FEEDER AND ROTOR SYNCHRONIZATION" xml:space="preserve">
+    <value>Feeder And Rotor Synchronization</value>
+  </data>
+  <data name="FREQUENCY RATIO TARGET" xml:space="preserve">
+    <value>Frequency Ratio Target</value>
+  </data>
 </root>
