--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -9813,4 +9813,10 @@
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>Defecțiunea comunicării în rețea cu partenerul extern</value>
   </data>
+  <data name="FEEDER AND ROTOR SYNCHRONIZATION" xml:space="preserve">
+    <value>Sincronizarea alimentatorului și rotorului</value>
+  </data>
+  <data name="FREQUENCY RATIO TARGET" xml:space="preserve">
+    <value>Raportul de frecvență țintă</value>
+  </data>
 </root>
