Update Localization - 1 text

--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -4246,7 +4246,7 @@
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_SYS_32" xml:space="preserve">
-    <value>Hardware Fault On Plc-Safty Input Card. Ensure No Short Circuits Are Present In Field On Estop Channels Or Bad Connections On Estop Knobs. Check The Safety Plc Input Module, Reset The Alarm And/Or Reboot The Plc Module</value>
+    <value>Hardware Fault On Plc-Safety Input Card. Ensure No Short Circuits Are Present In Field On Estop Channels Or Bad Connections On Estop Knobs. Check The Safety Plc Input Module, Reset The Alarm And/Or Reboot The Plc Module</value>
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_OVL_1" xml:space="preserve">
