--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -3457,7 +3457,7 @@
     <value>Invia la seguente ricetta a PLC?</value>
   </data>
   <data name="OPEN RECIPE" xml:space="preserve">
-    <value>Ricetta aperta</value>
+    <value>Apri Ricetta</value>
   </data>
   <data name="CREATE NEW RECIPE" xml:space="preserve">
     <value>Crea una nuova ricetta</value>
