Update infot text localization

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -10347,4 +10347,19 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>فلتر الهواء</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>تحقق من معلمات الجرعات الكيميائية وأعد ضبط الإنذار. إذا استمر الإنذار، يرجى الاتصال بمكتب سوريما الفني</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>تحقق من حالة مفتاح حد بوابات الأمان</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>تحقق من الخط الخارجي لطلب إيقاف حالة التوقف إلى خط سوريما</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>تحقق من الصومعة حيث لا يتم تفريغ أي مادة من أجل إنشاء جسر داخلي محتمل</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>استعادة حواجز السلامة للإنتاج</value>
+  </data>
 </root>
