--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -10347,4 +10347,19 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>Luftfilter</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>Überprüfen Sie die Dosierchemikalienparameter und setzen Sie den Alarm zurück. Wenn der Alarm weiterhin besteht, wenden Sie sich bitte an das technische Büro von Sorema</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>Überprüfen Sie den Status des Endschalters der Schutztüre</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>Überprüfen Sie die externe Leitung auf Notstopp-Status-Down-Anfrage an die Sorema-Leitung</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>Überprüfen Sie das Silo, da kein Material auf eine mögliche interne Brücke ausgetragen wird</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>Wiederherstellung der Sicherheitsbarrieren für die Produktion</value>
+  </data>
 </root>
