--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -10347,4 +10347,19 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>Filtro de aire</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>Verifique los parámetros químicos de dosificación y reinicie la alarma. Si la alarma persiste, póngase en contacto con la oficina técnica de Sorema</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>Verifique el estado del interruptor de límite de las puertas de seguridad</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>Verifique la línea externa para ver la solicitud de bajada del estado de parada a la línea Sorema</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>Revisar el Silo ya que no se descarga material por posible puente interno</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>Restaurar barreras de seguridad para la producción</value>
+  </data>
 </root>
