--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -10347,4 +10347,19 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>מסנן אוויר</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>בדוק פרמטרים כימיים של מינון ואפס אזעקה. אם האזעקה נמשכת, אנא פנה למשרד הטכני של סורמה</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>בדוק את המצב של מתג הגבול שערי הבטיחות</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>בדוק את הקו החיצוני עבור סטטוס Estop בקשת הורדה לקו Sorema</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>בדוק את הממגורה מכיוון ששום חומר לא נפרק עבור גשר פנימי אפשרי</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>שחזור מחסומי בטיחות לייצור</value>
+  </data>
 </root>
