--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -9808,7 +9808,7 @@
     <value>Comunicazione di rete disabilitata: tutti i segnali provenienti dai partner esterni vengono bypassati! Ripristinare la comunicazione il prima possibile.</value>
   </data>
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
-    <value>Controllare le condizioni del cavo Profinet, dei connettori, dell'alimentazione del modulo di comunicazione e del partner esterno</value>
+    <value>Gebruik Profinet-producten voor het gebruik van professionele producten لخارجي</value>
   </data>
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>Interruzione della comunicazione di rete con il partner esterno</value>
@@ -10346,5 +10346,20 @@
   </data>
   <data name="AIR FILTER" xml:space="preserve">
     <value>Luchtfilter</value>
+  </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>Zorg ervoor dat het apparaat niet goed werkt. Zorg ervoor dat u geen geld meer hebt</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>Zorg ervoor dat u de juiste keuze maakt</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>Zorg ervoor dat u uw geld terugkrijgt</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>Zorg ervoor dat u geen geld meer hebt voor uw geld. محتمل</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>De beste manier om dit te doen</value>
   </data>
 </root>
