--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -10347,4 +10347,19 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>Filtro de ar</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>Verifique os parâmetros químicos de dosagem e redefina o alarme. Se o alarme persistir, entre em contato com o escritório técnico da Sorema</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>Verifique o status da chave limitadora das portas de segurança</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>Verifique a linha externa para solicitar status de parada para baixo para a linha Sorema</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>Verifique o silo, pois nenhum material é descarregado para uma possível ponte interna</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>Restaurar barreiras de segurança para produção</value>
+  </data>
 </root>
