--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -10713,4 +10713,24 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>Air Filter</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>Check Dosing Chemical Parameters And Reset Alarm. If Alarm Persists, Please Contact Sorema Technical Office</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>Check The Status Of The Safety Gates Limit Switch</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>Check External Line For Estop Status Down Request To Sorema Line</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>Check The Silo Since No Material Is Discharged For a Possible Internal Bridge</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>Restore Safety Barriers For Production</value>
+    <comment>InfoText Message</comment>
+  </data>
 </root>
