--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -10347,4 +10347,19 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>Filtru de aer</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>Verificați parametrii chimici de dozare și resetați alarma. Dacă alarma persistă, vă rugăm să contactați biroul tehnic Sorema</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>Verificați starea comutatorului de limită porțile de siguranță</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>Verificați linia externă pentru starea de oprire Solicitarea de jos către linia Sorema</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>Verificați silozul deoarece nu este descărcat niciun material pentru un posibil pod intern</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>Restaurați barierele de siguranță pentru producție</value>
+  </data>
 </root>
