--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -10347,4 +10347,19 @@
   <data name="AIR FILTER" xml:space="preserve">
     <value>空气过滤器</value>
   </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>检查计量化学参数并重置警报。如果警报仍然存在，请联系 Sorema 技术办公室</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>检查安全门限位开关的状态</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>检查外部线路的急停状态 向下请求 Sorema 线路</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>检查筒仓，因为没有排出任何材料，可能存在内部桥</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>恢复生产安全屏障</value>
+  </data>
 </root>
