--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -9808,7 +9808,7 @@
     <value>Netwerkcommunicatie uitgeschakeld: alle signalen van externe partners worden omzeild! Herstel de communicatie zo snel mogelijk.</value>
   </data>
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
-    <value>Controleer de Profinet-kabel, connectoren, voeding van de communicatiemodule en externe partnervoorwaarden</value>
+    <value>Controllare le condizioni del cavo Profinet, dei connettori, dell'alimentazione del modulo di comunicazione e del partner esterno</value>
   </data>
   <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
     <value>Netwerkcommunicatiestoring met externe partner</value>
@@ -10346,5 +10346,20 @@
   </data>
   <data name="AIR FILTER" xml:space="preserve">
     <value>Filtro dell'aria</value>
+  </data>
+  <data name="INFO_PST_5" xml:space="preserve">
+    <value>Controllare i parametri chimici di dosaggio e ripristinare l'allarme. Se l'allarme persiste contattare l'Ufficio Tecnico Sorema</value>
+  </data>
+  <data name="INFO_SAFETY_4" xml:space="preserve">
+    <value>Controllare lo stato del finecorsa dei cancelli di sicurezza</value>
+  </data>
+  <data name="INFO_EXT_ESTOP" xml:space="preserve">
+    <value>Controllare la linea esterna per verificare lo stato Estop. Richiesta di inattività alla linea Sorema</value>
+  </data>
+  <data name="INFO_SILO_BRIDGE" xml:space="preserve">
+    <value>Controllare il silo poiché non viene scaricato materiale per un possibile ponte interno</value>
+  </data>
+  <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
+    <value>Ripristinare le barriere di sicurezza per la produzione</value>
   </data>
 </root>
